# care-calendar

./: .gitignore  HISTORY.rst  LICENSE  Makefile  README.rst  calendar.css  calendar.j2  comments.md  config-2023.yaml  foo.py  holidays-2022.yaml  make-calendar.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
care_calendar/: __init__.py  care_calendar.py  cli.py  custody.py  status.py  utils.py
docs/: CNAME  Makefile  calendar.css  calendar.j2  comments.md  index.html
docs/2021/: holidays-2021.yaml  index.html
docs/2022/: holidays-2022.yaml  index.html
docs/2023/: calendar-2023.html  holidays-2023.yaml  index.html
docs/2024/: calendar-2024.html  config-2024.yaml  index.html
docs/2025/: calendar-2025.html  config-2025.yaml  index.html
docs/2026/: calendar-2026.html  config-2026.yaml  index.html
docs/2027/: calendar-2027.html  config-2027.yaml  index.html
example/: comments.md  holidays-2021.yaml
kaloot/: __init__.py  calendar.py  collections.py  config.py  custody.py  date.py  event.py  feature.py  html.py  io.py
requirements/: base.txt  dev.txt  development.txt  requirements_dev.txt
templates/: base.html  base.html.j2  calendar.css  index.html  index.html.j2  legend.html.j2  master.j2  month.html.j2  month.j2  week.html.j2  week.j2  year.html.j2
tests/: __init__.py  kaloot  test-calendar.py  test_care_calendar.py  test_cli.py  test_status.py  test_utils.py
tests/data/: test_status.yaml
