[project]
name = "care-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.148.9",
    "pytest>=9.0.2",
]
